# FreqMeasure

./: .gitignore
doc/: Меню.txt
sources/: DDS.uvmpw.uvgui.Sasha
sources/Panel/: CMakeLists.txt  JLinkLog.txt  Panel.out  Panel.uvguix.Sasha  Panel.uvguix.Привет  Panel.uvoptx  Panel.uvprojx
sources/Panel/src/: Device.cpp  Keyboard.cpp  Log.cpp  Log.h  defines.h  main.c  main.cpp  main.h  main000.cpp  stdafx.h  structs.h
sources/Panel/src/Display/: Colors.cpp  Colors.h  Console.cpp  Console.h  Display.cpp  Display.h  DisplayTypes.h  Display_429.cpp  Draw.cpp  Draw.h  InputWindow.cpp  InputWindow.h  InputWindowStruct.cpp  Painter.cpp  Painter.h  PainterSTM429.cpp  Primitives.cpp  Primitives.h  Symbols.h  Text.cpp  Text.h
sources/Panel/src/Display/Draw/: Draw.cpp  Draw.h
sources/Panel/src/Display/Set/: DisplaySet.cpp  DisplaySet.h
sources/Panel/src/Display/font/: Font.cpp  Font.h
sources/Panel/src/FDrive/: FDrivePanel.cpp  FDrivePanel.h  File.cpp  File.h  File_requests.cpp  Items.cpp  Items.h
sources/Panel/src/FrequencyMeter/: FrequencyMeter.cpp  FrequencyMeter.h
sources/Panel/src/Generator/: GeneratorPanel.cpp  GeneratorPanel.h  Signals.cpp  Signals.h  Wave.cpp  WaveGraphics.cpp
sources/Panel/src/Hardware/: CPU.cpp  CPU.h  CPU_IT.cpp  CPU_Keyboard.cpp  Controls.cpp  Controls.h  HAL.cpp  HAL.h  LTDC.cpp  LTDC.h  Timer.cpp  Timer.h  Timer4XX.cpp  Timer4XX.h  VCP.cpp  VCP.h  stm429.cpp  stm429.h
sources/Panel/src/Hardware/Modules/: EEPROM.cpp  EEPROM.h  SPI.cpp  SPI.h
sources/Panel/src/Interface/: HandlersPanel.cpp  HandlersPanel.h  InterfacePanel.cpp  InterfacePanel.h  Transceiver_429.cpp
sources/Panel/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Panel/src/Menu/: Hint.cpp  Hint.h  Menu.cpp  Menu.h  MenuDrawing.cpp  MenuItems.cpp  MenuItems.h  MenuItemsDefs.h  MenuItemsGraphics.cpp  MenuItemsLogic.cpp
sources/Panel/src/Menu/Pages/: AddPageInput.cpp  AddPageInput.h  MainPage.cpp  MainPage.h  PageChannels.cpp  PageChannels.h  PageDebug.cpp  PageDebug.h  PageFrequencyCounter.cpp  PageFrequencyCounter.h  PageIndication.cpp  PageIndication.h  PageModes.cpp  PageModes.h  PageService.cpp  PageService.h
sources/Panel/src/Menu/Pages/Include/: PageSignals.h
sources/Panel/src/Menu/Pages/PageSignals/: PageSignals.cpp  PageSignals_Calibration.cpp  PageSignals_CalibrationA.cpp  PageSignals_CalibrationB.cpp  PageSignals_Load.cpp
sources/Panel/src/Settings/: CalibrationSettings.cpp  CalibrationSettings.h  Settings.cpp  Settings.h  SettingsTypes.h
sources/Panel/src/Utils/: BigNumber.cpp  BigNumber.h  CommonFunctions.cpp  CommonFunctions.h  Debug.cpp  Debug.h  IntValue.cpp  IntValue.h  List.cpp  List.h  Map.cpp  Map.h  Math.cpp  Math.h  Number.cpp  Number.h  NumberBuffer.cpp  NumberBuffer.h  Queue.cpp  Queue.h  Statistics.cpp  Statistics.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h
sources/Panel/src/libs/HAL/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c
sources/common/: Command.cpp  Command.h  Common.cpp  Common.h  CommonTypes.h  Message.cpp  Message.h  Transceiver.cpp  Transceiver.h  Wave.cpp  Wave.h
sources/common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_hcd.c
sources/fonts/: convert.bat
sources/scripts/Keil/: build.bat  out.txt
(+2 files in other folders)
